--- a/app/sass/modules/_details.scss
+++ b/app/sass/modules/_details.scss
@@ -1,6 +1,7 @@
 
 .details-container{
 	color:white;
+	-webkit-transform-style: preserve-3d;
 	.wrapper{
 		padding: 30px;
 		padding-bottom: 0;
@@ -29,6 +30,7 @@
 
 		&.share-area{
 			width: 200%;
+			min-height: 100px;
 			@include transform(translate3d(0,0,0));
 			@include transition (all .5s ease-in-out);
 
