--- a/app/sass/modules/_snap.scss
+++ b/app/sass/modules/_snap.scss
@@ -81,6 +81,7 @@ snap-drawer,
   position: fixed;
   color: #fff;
   width:290px;
+  overflow-x: hidden;
 
 }
 .snapjs-left .snap-drawer-right,
